--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
         "*.db": "sql",
         "stdlib.h": "c",
         "stdio.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "distance_matrix.h": "c",
+        "time.h": "c",
+        "graph.h": "c",
+        "tsp_io.h": "c",
+        "brute_force.h": "c"
     }
 }
